# math_quiz

./: .dockerignore  .gitignore  Dockerfile  Dockerfile-base  docker-compose-data.yml  docker-compose.yml  init.sql  pyproject.toml
.streamlit/: config.toml  prod.config.toml
docker/: postgresql.conf
math_quiz/: prompts.py  settings.py  streamlit_app.py
prisma/: schema.prisma
